--- a/ALM.Web/Views/Shared/_Layout.cshtml
+++ b/ALM.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Transaction" asp-action="Transact">Transactions</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Transfer" asp-action="Index">Transfers</a>
+                        </li>
                     </ul>
                 </div>
             </div>
